# assembler_labs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cfg/: assembler_labs.ass  assembler_labs.pli  assembler_labs.tex  cfg.cmake  list.mod
doc/: Doxyfile  README.md
scripts/: README.md  install.sh  refresh.sh  run.sh  test.sh
src/: main_1.c  main_2.c  main_3.c  src.cmake
tests/: CMakeLists.txt  README.md
tests/src_test/config_test/: README.md
